--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.overflow-hidden {
+    overflow: hidden;
+  }
+  
+  .text-ellipsis {
+    text-overflow: ellipsis;
+  }
+  
+  .break-words {
+    word-break: break-word;
+  }
+  
